# MEV781_Tutorials

./: An explanation of Time Synchronous Averaging and Computed Order Tracking.ipynb  An explanation of the Fourier Transform.ipynb  An explanation of the Wavelet Transform.ipynb  Intuitive explanation of the Fourier Transform.ipynb  README.md  Sawtooth signal Fourier Series derivation.ipynb  TSA and COT examples.ipynb  The TSA and COT, explained.ipynb  pyproject.toml
