[tool.poetry]
name = "mev781-tutorials"
version = "0.1.0"
description = "repo for notebook tutorials for MEV781."
authors = ["RyanBalshaw <ryanbalshaw81@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mev781_tutorials"}]

[tool.poetry.dependencies]
python = "^3.10"
ipympl = "^0.9.2"
jupyterlab = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
